SERVER-21843 warn user if locked memory limit is too low